--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  outline: none;
+  border: none;
+}
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif;
+  /* line-height: 1.5; */
+  /* font-weight: 400; */
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -12,12 +21,29 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  /* Color Define */
+
+  --bg-color: #f3f4f6;
+  --text-700: #374151;
+  --text-400: #94a3b8;
+  --text-500: #64748b;
+  --text-100: #f1f5f9;
+  --text-300: #d1d5db;
+  --white: #fff;
+  --primary-700: #4338ca;
+  --primary-600: #4f46e5;
+  --primary-100: #e0e7ff;
+  --rose-500: #f43f5e;
 }
 
 a {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
+  /* color: inherit; */
+  text-decoration: none;
+  /* text-decoration: inherit; */
+  cursor: pointer;
 }
 a:hover {
   color: #535bf2;
@@ -26,9 +52,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding: 1rem;
 }
 
 h1 {
@@ -37,15 +63,22 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  /* border-radius: 8px; */
+  /* border: 1px solid transparent; */
+  /* padding: 0.6em 1.2em; */
+  /* font-size: 1em; */
+  /* font-weight: 500; */
+  /* font-family: inherit; */
+  /* background-color: #1a1a1a; */
+  
+  
+  
+  outline: none;
+  border: none;
+  background-color: transparent;
   cursor: pointer;
   transition: border-color 0.25s;
+
 }
 button:hover {
   border-color: #646cff;
@@ -53,6 +86,9 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+button:disabled {
+  cursor: not-allowed;
 }
 
 @media (prefers-color-scheme: light) {
@@ -67,3 +103,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+
+
