--- a/src/components/NewMoviesList.css
+++ b/src/components/NewMoviesList.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 .movie {
@@ -10,7 +10,8 @@
     margin: 1rem;
     border-radius: 3px;
     box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
-    background-color: var(--secondary-color);
+    background-color:    #457b9d;
+    /* background-color:    var(--secondary-color); */
     position: relative;
     overflow: hidden;
   }
@@ -26,7 +27,7 @@
     color: var(--primary-color);
     padding: 1rem;
     max-height: 100%;
-    transform: translateY(101%);
+    transform: translateY(100%);
     transition: transform 0.3s ease-in;
   }
   .movie:hover .overview {
