--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex; */
   min-width: 320px;
   min-height: 100vh;
   padding: 1rem;
