--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 #root {
   /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
-  
+  /* padding: 2rem; */
 }
 
 .logo {
@@ -41,8 +40,6 @@
 .read-the-docs {
   color: #888;
 }
-
-
 
 /* Header */
 
