--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -9,7 +9,7 @@
   margin-top: 1rem;
 }
 .banner .poster {
-  width: 300px;
+  width: 350px;
   margin: 1rem;
   border-radius: 3px;
   box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
@@ -17,6 +17,7 @@
   /* background-color:    var(--secondary-color); */
   /* position: relative; */
   overflow: hidden;
+  border: 1px solid red;
 }
 .banner .bannerInfo {
   display: flex;
