--- a/src/index.css
+++ b/src/index.css
@@ -59,25 +59,24 @@
   --primary-100: #e0e7ff;
   --rose-500: #f43f5e;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  /* color: inherit; */
-  text-decoration: none;
-  /* text-decoration: inherit; */
-  cursor: pointer;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   /* display: flex; */
   min-width: 320px;
   min-height: 100vh;
   /* padding: 1rem; */
+  background-color: var(--secondary-color);
+}
+a {
+  font-weight: 500;
+  /* color: #646cff; */
+  /* color: inherit; */
+  text-decoration: none;
+  /* text-decoration: inherit; */
+  cursor: pointer;
+}
+a:hover {
+  /* color: #535bf2; */
 }
 
 h1 {
