--- a/src/App.css
+++ b/src/App.css
@@ -158,3 +158,15 @@
   padding: 0.6rem;
   border-radius: 1rem;
 }
+
+#footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.footerData {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
