--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  height: 3rem;
+  padding: 5px;
+  /* will-change: filter; */
+  /* transition: filter 300ms; */
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
