--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   outline: none;
   border: none;
 }
+
 :root {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     Helvetica Neue, sans-serif;
@@ -76,6 +77,10 @@ a {
   cursor: pointer;
 }
 a:hover {
+  /* color: #535bf2; */
+}
+
+a:visited {
   /* color: #535bf2; */
 }
 
