--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,3 +1,57 @@
+/* Header */
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+}
+.headerSearch {
+  display: flex;
+  width: 100%;
+  max-width: 900px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  border: 1px solid var(--color-grey-2);
+  border-radius: 1.5rem;
+  padding: 1rem;
+}
+
+.headerSearchItem {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.logoPart {
+  width: 30%;
+}
+.searchPart {
+  width: 70%;
+}
+
+.headerSearchItem .separator {
+  display: inline-block;
+  width: 1px;
+  height: 30px;
+  background-color: var(--color-grey-2);
+  margin: 0 1rem;
+}
 .headerSearchItem .siteName {
   color: var(--color-secondary);
+  font-size: 1.5rem;
+}
+.headerSearchInput {
+  padding: 0.7rem 0.5rem;
+  font-size: 1rem;
+  width: 100%;
+  padding: 0.7rem 1rem;
+  border-radius: 0.5rem;
+}
+.headerIcon {
+  width: 1.5rem;
+  height: 1.5rem;
+  display: inline-block;
 }
