--- a/src/components/NewMoviesList.css
+++ b/src/components/NewMoviesList.css
@@ -2,5 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-image: linear-gradient(62deg, #181719 100%, #3a3d40 0%);
+  background-color: var(--color-primary);
+  background-image: var(--gradient2);
 }
