--- a/src/pages/Home/MovieBanner/MovieBanner.css
+++ b/src/pages/Home/MovieBanner/MovieBanner.css
@@ -7,12 +7,7 @@
 }
 .newMovieBox {
   background: rgb(127, 29, 29);
-  background: linear-gradient(
-    90deg,
-    rgba(127, 29, 29, 1) 0%,
-    rgba(185, 28, 28, 1) 28%,
-    rgba(220, 38, 32, 1) 100%
-  );
+  background: var(--movieBannerGradient);
   border-radius: 25px;
   min-width: 1280px;
   max-width: 1280px;
