--- a/src/pages/Home/SeriesBanner/SeriesBanner.css
+++ b/src/pages/Home/SeriesBanner/SeriesBanner.css
@@ -15,6 +15,13 @@
   flex-direction: column;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  min-height: 500px;
+}
+.newSeriesBox h3 {
+  margin: 1rem 0 0 1rem;
+}
+.newSeriesBox .loading {
+  margin: 1rem 0 0 1rem;
 }
 
 .seriesAlbum {
