--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,8 @@
   --color-primary: #191d2b;
   --color-secondary: #27ae60;
   --color-icon: #b2becd;
-  --color-active-icon: #ffffff;
-  --color-white: #ffffff;
+  --color-active-icon: #fff;
+  --color-white: #fff;
   --color-black: #000;
   --color-grey0: #f8f8f8;
   --color-grey-1: #dbe1e8;
