--- a/src/components/SerieCard/SerieCard.css
+++ b/src/components/SerieCard/SerieCard.css
@@ -1,4 +1,4 @@
-.movie {
+.serie {
   width: 300px;
   margin: 1rem;
   border-radius: 3px;
@@ -7,10 +7,10 @@
   position: relative;
   overflow: hidden;
 }
-.movie img {
+.serie img {
   width: 100%;
 }
-.movie .overview {
+.serie .overview {
   position: absolute;
   left: 0;
   right: 0;
@@ -22,13 +22,13 @@
   transform: translateY(100%);
   transition: transform 0.3s ease-in;
 }
-.movie:hover .overview {
+.serie:hover .overview {
   transform: translateY(0);
 }
-.movie .overview h3 {
+.serie .overview h3 {
   color: var(--color-black);
 }
-.movieInfo {
+.serieInfo {
   /* color: aliceblue; */
   display: flex;
   align-items: center;
@@ -37,34 +37,34 @@
   letter-spacing: 0.5px;
   background-color: var(--color-grey-5);
 }
-.movieInfo h3 {
+.serieInfo h3 {
   margin-top: 0;
 }
-.movieInfo .movieTitle {
+.serieInfo .serieTitle {
   width: 200px;
   height: 65px;
   overflow: hidden;
 }
-.movieInfo .rating {
+.serieInfo .rating {
   height: 65px;
   /* display: flex; */
 }
-.movieInfo span {
+.serieInfo span {
   background-color: var(--primary-color);
   padding: 0.2rem 0.5rem;
   border-radius: 3px;
   font-weight: bold;
 }
-.movieInfo span.green {
+.serieInfo span.green {
   color: lightgreen;
 }
-.movieInfo span.orange {
+.serieInfo span.orange {
   color: orange;
 }
-.movieInfo span.red {
+.serieInfo span.red {
   color: red;
 }
 
-.movieInfo h3 {
+.serieInfo h3 {
   color: var(--color-secondary);
 }
