--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -178,8 +178,16 @@ ol.people li .character {
 }
 
 .providerCountry {
+  border: 1px solid var(--color-secondary);
+  margin: 1rem 1rem;
+  /* background-color: #085f08; */
+  color: black;
+  border-radius: 5px;
+  border: 1px solid #e3e3e3;
+  background-color: #b1a6a6;
 }
 .providerCountryName {
+  margin-left: 5px;
 }
 .providerLogo {
   width: 50px;
