--- a/src/pages/Home/MovieBanner/MovieBanner.css
+++ b/src/pages/Home/MovieBanner/MovieBanner.css
@@ -1,37 +1,79 @@
-#new-movie-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+@media screen and (max-width: 600px) {
+  #new-movie-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .newMovieBox {
+    background: #7f1d1d;
+    background: var(--movieBannerGradient);
+    border-radius: 25px;
+    min-width: 300px;
+    max-width: 350px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    min-height: 200px;
+  }
+  .newMovieBox h3 {
+    margin: 0.5rem 0 0 1rem;
+  }
+  .newMovieBox .loading {
+    margin: 1rem 0 0 1rem;
+  }
+  .movieAlbum {
+    display: flex;
+    overflow: hidden;
+    padding-bottom: 0;
+  }
+  .showMore {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 1rem;
+    font-weight: 700;
+    font-size: large;
+    margin-bottom: 1rem;
+  }
 }
-.newMovieBox {
-  background: #7f1d1d;
-  background: var(--movieBannerGradient);
-  border-radius: 25px;
-  min-width: 1280px;
-  max-width: 1280px;
-  display: flex;
-  flex-direction: column;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  min-height: 500px;
-}
-.newMovieBox h3 {
-  margin: 1rem 0 0 1rem;
-}
-.newMovieBox .loading {
-  margin: 1rem 0 0 1rem;
-}
-.movieAlbum {
-  display: flex;
-  overflow: hidden;
-  padding-bottom: 0;
-}
-.showMore {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 1rem;
-  font-weight: 700;
-  font-size: large;
-  margin-bottom: 1rem;
+
+@media screen and (min-width: 601px) {
+  #new-movie-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .newMovieBox {
+    background: #7f1d1d;
+    background: var(--movieBannerGradient);
+    border-radius: 25px;
+    min-width: 1280px;
+    max-width: 1280px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    min-height: 500px;
+  }
+  .newMovieBox h3 {
+    margin: 1rem 0 0 1rem;
+  }
+  .newMovieBox .loading {
+    margin: 1rem 0 0 1rem;
+  }
+  .movieAlbum {
+    display: flex;
+    overflow: hidden;
+    padding-bottom: 0;
+  }
+  .showMore {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 1rem;
+    font-weight: 700;
+    font-size: large;
+    margin-bottom: 1rem;
+  }
 }
