--- a/src/components/SerieCard/SerieCard.css
+++ b/src/components/SerieCard/SerieCard.css
@@ -1,70 +1,98 @@
-.serie {
-  width: 300px;
-  margin: 1rem;
-  border-radius: 3px;
-  box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
-  background-color: var(--color-grey-5);
-  position: relative;
-  overflow: hidden;
-}
-.serie img {
-  width: 100%;
-}
-.serie .overview {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: aliceblue;
-  color: var(--color-black);
-  padding: 1rem;
-  max-height: 100%;
-  transform: translateY(100%);
-  transition: transform 0.3s ease-in;
-}
-.serie:hover .overview {
-  transform: translateY(0);
-}
-.serie .overview h3 {
-  color: var(--color-black);
-}
-.serieInfo {
-  /* color: aliceblue; */
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.5rem 1rem 1rem;
-  letter-spacing: 0.5px;
-  background-color: var(--color-grey-5);
-}
-.serieInfo h3 {
-  margin-top: 0;
-}
-.serieInfo .serieTitle {
-  width: 200px;
-  height: 65px;
-  overflow: hidden;
-}
-.serieInfo .rating {
-  height: 65px;
-  /* display: flex; */
-}
-.serieInfo span {
-  background-color: var(--primary-color);
-  padding: 0.2rem 0.5rem;
-  border-radius: 3px;
-  font-weight: bold;
-}
-.serieInfo span.green {
-  color: lightgreen;
-}
-.serieInfo span.orange {
-  color: orange;
-}
-.serieInfo span.red {
-  color: red;
+/* Breakpoints 600 , 700, 970, 1070, 1432 */
+
+/* Mobile View */
+@media screen and (max-width: 600px) {
+  .serie {
+    width: 100px;
+    margin: 1rem;
+    border-radius: 3px;
+    box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
+    background-color: var(--color-grey-5);
+    position: relative;
+    overflow: hidden;
+  }
+  .serie img {
+    width: 100%;
+  }
+  .serie .overview {
+    display: none;
+  }
+
+  .serieInfo {
+    display: none;
+  }
 }
 
-.serieInfo h3 {
-  color: var(--color-secondary);
+/* Desktop View */
+@media screen and (min-width: 601px) {
+  .serie {
+    width: 300px;
+    margin: 1rem;
+    border-radius: 3px;
+    box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
+    background-color: var(--color-grey-5);
+    position: relative;
+    overflow: hidden;
+  }
+  .serie img {
+    width: 100%;
+  }
+  .serie .overview {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: aliceblue;
+    color: var(--color-black);
+    padding: 1rem;
+    max-height: 100%;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in;
+  }
+  .serie:hover .overview {
+    transform: translateY(0);
+  }
+  .serie .overview h3 {
+    color: var(--color-black);
+  }
+  .serieInfo {
+    /* color: aliceblue; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem 1rem;
+    letter-spacing: 0.5px;
+    background-color: var(--color-grey-5);
+  }
+  .serieInfo h3 {
+    margin-top: 0;
+  }
+  .serieInfo .serieTitle {
+    width: 200px;
+    height: 65px;
+    overflow: hidden;
+  }
+  .serieInfo .rating {
+    height: 65px;
+    /* display: flex; */
+  }
+  .serieInfo span {
+    background-color: var(--primary-color);
+    padding: 0.2rem 0.5rem;
+    border-radius: 3px;
+    font-weight: bold;
+  }
+  .serieInfo span.green {
+    color: lightgreen;
+  }
+  .serieInfo span.orange {
+    color: orange;
+  }
+  .serieInfo span.red {
+    color: red;
+  }
+
+  .serieInfo h3 {
+    color: var(--color-secondary);
+  }
 }
