--- a/src/pages/SeriesPage/Series.css
+++ b/src/pages/SeriesPage/Series.css
@@ -1,8 +1,8 @@
-.singleMovie {
+.singleSeries {
   margin-top: 1rem;
 }
 
-.singleMovie .upper {
+.singleSeries .upper {
   background-color: var(--color-primary);
   background-image: var(--gradient2);
   min-height: 350px;
@@ -10,7 +10,7 @@
   justify-content: center;
   background-repeat: no-repeat;
 }
-.singleMovie .upper .cover {
+.singleSeries .upper .cover {
   background-image: linear-gradient(
     to right,
     rgba(3, 37, 65, 1) 150px,
@@ -19,13 +19,13 @@
   width: 100%;
 }
 
-.singleMovie .banner {
+.singleSeries .seriesBanner {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-top: 1rem;
 }
-.banner .bannerPoster {
+.seriesBanner .bannerPoster {
   width: 300px;
   margin: 1rem;
   border-radius: 3px;
@@ -35,13 +35,13 @@
   overflow: hidden;
   /* border: 1px solid red; */
 }
-.singleMovie .banner img {
+.singleSeries .seriesBanner img {
   width: 100%;
   overflow-clip-margin: content-box;
   overflow: clip;
   /* object-fit: contain; */
 }
-.banner .bannerInfo {
+.seriesBanner .bannerInfo {
   width: 700px;
   display: flex;
   flex-direction: column;
@@ -51,10 +51,10 @@
   margin: 1rem;
 }
 
-.banner .bannerInfo .movieTitle {
+.seriesBanner .bannerInfo .seriesTitle {
   color: var(--color-secondary);
 }
-.banner .details {
+.seriesBanner .details {
   /* display: flex; */
   /* flex-direction: start; */
 }
@@ -66,35 +66,35 @@
 .tagline {
   font-style: italic;
 }
-.banner .producers {
+.seriesBanner .producers {
   display: flex;
   /* justify-content: spa; */
 }
-.banner .producers .creator {
+.seriesBanner .producers .creator {
   width: 100%;
 }
 
-.banner .rating span.green {
+.seriesBanner .rating span.green {
   color: #085f08;
 }
-.banner .rating span.orange {
+.seriesBanner .rating span.orange {
   color: #ffa500;
 }
-.banner .rating span.red {
+.seriesBanner .rating span.red {
   color: red;
 }
 
-/* Movie Body */
+/* Series Body */
 .extraDetails {
   display: flex;
   flex-direction: row;
 }
 
-.extraDetails .movieSidebar {
+.extraDetails .seriesSidebar {
   min-width: 300px;
   width: 25%;
 }
-.extraDetails .moviePannel {
+.extraDetails .seriesPannel {
   min-width: 300px;
   width: 70%;
 }
@@ -103,7 +103,7 @@
   margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
-/* .movieCast {
+/* .seriesCast {
   display: flex;
 } */
 ol.people {
