--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,42 +1,37 @@
 /* Breakpoints 600 , 700, 970, 1070, 1432 */
+/* Mobile View */
+/* @media screen and (max-width: 600px) {
+} */
 .footerData a,
 .footerData a:hover,
 .footerData a:active,
 .footerData a:visited {
   color: var(--color-white);
 }
-/* Mobile View */
-@media screen and (max-width: 600px) {
-  #footer {
-    display: flex;
-    /* flex-direction: column; */
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 60px;
-  }
-  .footerData {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-  }
+#footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+#footer {
+  flex-direction: column;
+}
+.footerData {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 /* Desktop View */
 @media screen and (min-width: 601px) {
   #footer {
-    display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 60px;
   }
   .footerData {
-    width: 100%;
-    display: flex;
     flex-direction: row;
-    justify-content: space-around;
   }
 }
